--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
             <h1>Get Improved Website Traffic & Higher Conversion Rates with Our Digital Marketing Services</h1>
             <p>
             </p>
-           
+          <div class="button">
+              <a href="javascript:void(0)" class="btn primary-btn">Get Started</a>
+              <a href="https://www.youtube.com/watch?v=r44RKWyfcFw&fbclid=IwAR21beSJORalzmzokxDRcGfkZA1AtRTE__l5N4r09HcGS5Y6vOluyouM9EM"
+                class="glightbox video-button">
+                <span class="btn icon-btn rounded-full">
+                  <i class="lni lni-play"></i>
+                </span>
+              </a>
+            </div>  
           </div>
         </div>
         <div class="col-lg-6 col-md-12 col-12">
